<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">账本记录</string>
    <string name="action_settings">设置</string>
    <string name="title_section1">添加账目</string>
    <string name="title_section2">账目明细</string>
    <string name="title_section3">统计信息</string>
    <string name="title_section4">关于我们</string>
    <string name="add_account">添加记录</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="date">日期</string>
    <string name="amount">数额</string>
    <string name="description">描述</string>
    <string name="total">总计</string>
    <string name="dummy">Dummy Studio</string>

</resources>
